--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
+    "functions": {
+        "index.js": {
+        "runtime": "nodejs18.x"
+        }
+    }
 }
+  
