--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
     "functions": {
-        "index.js": {
-        "runtime": "nodejs18.x"
-        }
-    }
+        "index.js": {}
+    },
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/index.js" }
+    ]
 }
   
