--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,36 @@
 {
-    "functions": {
-        "index.js": {}
-    },
-    "rewrites": [
-        { "source": "/(.*)", "destination": "/index.js" }
+    "version": 2,
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "*.html",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "*.css",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "*.js",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "*.(png|jpg|jpeg|gif|svg)",
+        "use": "@vercel/static"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/feedback",
+        "dest": "/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/$1"
+      }
     ]
-}
+  }
   
