--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
     "version": 2,
+    "builds": [
+      { "src": "index.js", "use": "@vercel/node" },
+      { "src": "**/*", "use": "@vercel/static" }
+    ],
     "routes": [
-    
-    {
-        "src": "/(.*)",
-        "dest": "/$1"
-    }
-]
-}
+      { "src": "/feedback", "dest": "/index.js" },
+      { "src": "/(.*)", "dest": "/$1" }
+    ]
+  }
   
